--- a/.tekton/nbde-tang-server-multiarch-pull-request.yaml
+++ b/.tekton/nbde-tang-server-multiarch-pull-request.yaml
@@ -37,7 +37,7 @@ spec:
     - linux/ppc64le
     - linux/s390x
   - name: dockerfile
-    value: Dockerfile
+    value: Dockerfile.konflux
   pipelineSpec:
     description: |
       This pipeline is ideal for building multi-arch container images from a Containerfile while maintaining trust after pipeline customization.
