--- a/Dockerfile.konflux
+++ b/Dockerfile.konflux
@@ -1,5 +1,5 @@
 # Build the manager binary
-FROM golang:1.23.2 as builder
+FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:v1.23.2-202411222126.g971a316.el9 AS builder
 
 # Workspace workdir
 WORKDIR /workspace
@@ -22,8 +22,8 @@ COPY LICENSE LICENSE
 RUN echo "GOARCH=${goarch}"
 RUN GOFLAGS='' CGO_ENABLED=0 GOOS=linux GOARCH=${goarch} go build -a -o manager main.go
 
-# Use distroless as minimal base image to package the manager binary
-FROM gcr.io/distroless/static:nonroot
+# Use well-known UBI9 micro image
+FROM registry.access.redhat.com/ubi9/ubi-micro@sha256:f6e0a71b7e0875b54ea559c2e0a6478703268a8d4b8bdcf5d911d0dae76aef51
 
 # Include Konflux required labels
 LABEL com.redhat.component="NBDE Tang Server"
