--- a/.tekton/fbc-4-18-pull-request.yaml
+++ b/.tekton/fbc-4-18-pull-request.yaml
@@ -379,7 +379,8 @@ spec:
       optional: true
     - name: netrc
       optional: true
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-fbc-4-18
   workspaces:
   - name: workspace
     volumeClaimTemplate:
