--- a/.tekton/nbde-tang-server-multiarch-1-1-pull-request.yaml
+++ b/.tekton/nbde-tang-server-multiarch-1-1-pull-request.yaml
@@ -524,7 +524,8 @@ spec:
       optional: true
     - name: netrc
       optional: true
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-nbde-tang-server-multiarch-1-1
   workspaces:
   - name: git-auth
     secret:
