--- a/.tekton/nbde-tang-server-multiarch-1-1-push.yaml
+++ b/.tekton/nbde-tang-server-multiarch-1-1-push.yaml
@@ -521,7 +521,8 @@ spec:
       optional: true
     - name: netrc
       optional: true
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-nbde-tang-server-multiarch-1-1
   workspaces:
   - name: git-auth
     secret:
