--- a/.tekton/nbde-tang-server-multiarch-bundle-push.yaml
+++ b/.tekton/nbde-tang-server-multiarch-bundle-push.yaml
@@ -497,7 +497,8 @@ spec:
       optional: true
     - name: netrc
       optional: true
-  taskRunTemplate: {}
+  taskRunTemplate:
+    serviceAccountName: build-pipeline-nbde-tang-server-multiarch-bundle
   workspaces:
   - name: git-auth
     secret:
